--- a/olympics.html
+++ b/olympics.html
@@ -14,6 +14,9 @@
 
 <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
+<p>
+  This website was created by the muthas of your muthas.
+</p>
 
 
 </body> 
