--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
  
 </head>
 <body>
-
+<nav>
+    <ul>
+        <li><a href="http://output.jsbin.com/tibudi/">Home </a>
+        <li><a href="http://output.jsbin.com/cawako/">Skills</a></li>
+        <li><a href="http://output.jsbin.com/wejake/">Contact Me</a></li>
+    </ul>
+</nav>
   
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
