--- a/olympics.html
+++ b/olympics.html
@@ -35,7 +35,7 @@
 <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
 <p>
-  This website was created by the muthas of your muthas.
+  This website was created by a total dumbass and his friend Shray.
 </p>
 
 
