--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <title>Shray Patel</title>
   <link rel='stylesheet' href='style.css'>
   <meta charset="utf-8">
+  <style>
     
+  </style>  
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/material.min.css">
@@ -15,6 +17,7 @@
   <link rel="stylesheet" href="style.css">
   <title>South Africa</title>
 </head>
+
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
   <h1>mc</h1>
