--- a/olympics.html
+++ b/olympics.html
@@ -26,8 +26,8 @@
 </head>
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
-  <h1>mc</h1>
-  <h4></h4>
+  <h1>Hi Mr Mckavish!</h1>
+  <h4>This website was created by TEAM SOUTH AFRICA!/h4>
 </div>
 </body>
 </html>
@@ -35,7 +35,7 @@
 <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
 <p>
-  This website was created by a total dumbass and his friend Shray.
+ Dem sweggy
 </p>
 
 
