--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
-  <h1>mc</h1>
+  <h1>Team Sweglords </h1>
   <h4></h4>
 </div>
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
