--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <link rel="stylesheet" href="style.css">
   <title>South Africa</title>
 </head>
+  <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
-  <h1>Team Sweglords </h1>
-  <h4></h4>
+  <h1>The Team</h1>
+  <h4>All of our team's current and past memebers</h4>
 </div>
-  <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
 
 </body>   
