--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
   <h1>Hi Mr Mckavish!</h1>
-  <h4>This website was created by TEAM SOUTH AFRICA!/h4>
+  <h4>This website was created by TEAM SOUTH AFRICA!</h4>
 </div>
 </body>
 </html>
