--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
 <p>
- Dem sweggy
+We are blacks and we are proud of it. We also have ebola.
 </p>
 
 
