--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
 <p>
-Haley Ariel Mckavish was a dipshit. Emphasize 'was'
+MAstura
 </p>
 
 
