--- a/olympics.html
+++ b/olympics.html
@@ -25,6 +25,9 @@
   <h4>All of our team's current and past members</h4>
 </div>
 
+<p>
+  Our current team members are Arnav Gupta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain Karan Sidhu.
+</p>
 
 </body>   
 </html>
