--- a/olympics.html
+++ b/olympics.html
@@ -26,8 +26,12 @@
 </div>
 
 <p>
-  Our current team members are Arnav Gupta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain Karan Sidhu.
+  Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain Karan Sidhu.
 </p>
+
+<div class = "jumbotron">
+  HI YU LEE JAM SU SEMBOYA AHH YEMELASIKIEA
+</div>
 
 </body>   
 </html>
