--- a/olympics.html
+++ b/olympics.html
@@ -29,7 +29,7 @@
   Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain Karan Sidhu.
 </p>
 
-<div div style="background:#0F0F0F0">
+<div style="background:#0F0F0F0">
   HI YU LEE JAM SU SEMBOYA AHH YEMELASIKIEA
 </div>
 
