--- a/index.html
+++ b/index.html
@@ -29,11 +29,26 @@
   <h1>Hi Mr. Mckavish!</h1>
   <h4>This website was created by TEAM SOUTH AFRICA!</h4>
 </div>
-</body>
-</html>
 
-<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-
+<h3> South Africa's NAtional Anthem!</h3>
+<p>
+Nkosi sikelel' Afrika
+Maluphakanyisw' uphondo lwayo,
+Yizwa imithandazo yethu,
+Nkosi sikelela, thina lusapho lwayo.
+Morena boloka setjhaba sa heso,
+O fedise dintwa le matshwenyeho,
+O se boloke, O se boloke setjhaba sa heso,
+Setjhaba sa South Afrika - South Afrika.
+Uit die blou van onse hemel,
+Uit die diepte van ons see,
+Oor ons ewige gebergtes,
+Waar die kranse antwoord gee,
+Sounds the call to come together,
+And united we shall stand,
+Let us live and strive for freedom,
+In South Africa our land.
+</p>
 <p>
 
 </p>
