--- a/olympics.html
+++ b/olympics.html
@@ -30,7 +30,7 @@
 </p>
 
 <div style="background:#0F0F0F0">
-  HI YU LEE JAM SU SEMBOYA AHH YEMELASIKIEA
+  Fucking faggot is to the right of Eyan
 </div>
 
 </body>   
