--- a/olympics.html
+++ b/olympics.html
@@ -30,7 +30,7 @@
 </p>
 
 <div style="background:#0F0F0F0">
-  Fucking faggot is to the right of Eyan
+  I will genetically modify your Daughters. Yes, I helped you get a second one.
 </div>
 
 </body>   
