--- a/olympics.html
+++ b/olympics.html
@@ -25,12 +25,11 @@
   <h4>All of our team's current and past members</h4>
 </div>
 
-<p>
+
+<div>
+  <p>
   Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain Karan Sidhu.
 </p>
-
-<div style="background:#0F0F0F0">
-  I will genetically modify your Daughters. Yes, I helped you get a second one.
 </div>
 
 </body>   
