--- a/index.html
+++ b/index.html
@@ -29,26 +29,12 @@
   <h1>Hi Mr. Mckavish!</h1>
   <h4>This website was created by TEAM SOUTH AFRICA!</h4>
 </div>
-
-<h3> South Africa's NAtional Anthem!</h3>
-<p>
-Nkosi sikelel' Afrika
-Maluphakanyisw' uphondo lwayo,
-Yizwa imithandazo yethu,
-Nkosi sikelela, thina lusapho lwayo.
-Morena boloka setjhaba sa heso,
-O fedise dintwa le matshwenyeho,
-O se boloke, O se boloke setjhaba sa heso,
-Setjhaba sa South Afrika - South Afrika.
-Uit die blou van onse hemel,
-Uit die diepte van ons see,
-Oor ons ewige gebergtes,
-Waar die kranse antwoord gee,
-Sounds the call to come together,
-And united we shall stand,
-Let us live and strive for freedom,
-In South Africa our land.
-</p>
+<IMG class="displayed" 
+src=http://upload.wikimedia.org/wikipedia/commons/3/3e/Tennis_Racket_and_Balls.jpg  
+style="width:304px;length:210px;">
+<div>
+  
+</div>
 
 
 
