--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
   <h1>Hi Mr. Mckavish!</h1>
   <h4>This website was created by TEAM SOUTH AFRICA!</h4>
 </div>
+<div>
 <IMG class="displayed" 
 src=http://upload.wikimedia.org/wikipedia/commons/3/3e/Tennis_Racket_and_Balls.jpg  
 style="width:304px;length:210px;">
+  </div>
 <div>
   
 </div>
