--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 </div>
 <div>
 <IMG class="displayed" 
-src=http://upload.wikimedia.org/wikipedia/commons/3/3e/Tennis_Racket_and_Balls.jpg  
-style="width:304px;length:210px;">
+src=http://dt9guucc6nuua.cloudfront.net/media/LargeP/965437b4-ad48-4da8-bdfd-b0b3494d2186.jpg?v=266003160
+style="width:100px;length:150px;">
   </div>
 <div>
   
