--- a/index.html
+++ b/index.html
@@ -26,8 +26,17 @@
 </head>
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
+  
   <h1>Hi Mr. Mckavish!</h1>
+  
   <h4>This website was created by TEAM SOUTH AFRICA!</h4>
+ <nav>
+    <ul>
+        <li><a href="http://jsbin.com/tibudi/">Home </a></li>
+        <li><a href="http://jsbin.com/cawako/">Skills</a></li>
+        <li><a href="http://output.jsbin.com/wejake/">Contact Me</a></li>
+    </ul>
+  </nav>
 </div>
 
 <div>
