--- a/index.html
+++ b/index.html
@@ -26,21 +26,13 @@
 </head>
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
-  
   <h1>Hi Mr. Mckavish!</h1>
-  
   <h4>This website was created by TEAM SOUTH AFRICA!</h4>
- <nav>
-    <ul>
-        <li><a href="http://jsbin.com/tibudi/">Home </a></li>
-        <li><a href="http://jsbin.com/cawako/">Skills</a></li>
-        <li><a href="http://output.jsbin.com/wejake/">Contact Me</a></li>
-    </ul>
-  </nav>
 </div>
 
 <div>
-  
+  If you can read this Mr. McKavish, then you are at the official South African Olympics website. You can find out more about
+  our team and its members by exploring the page. We truly hope you enjoy this!
 </div>
 
 
