--- a/olympics.html
+++ b/olympics.html
@@ -28,7 +28,8 @@
 
 <div>
   <p>
-  Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain Karan Sidhu.
+  Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain 
+  Karan Sidhu. We created this webstie using teamwork, creativity, and cooperation. 
 </p>
 </div>
 
