--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
-  <h1>Hi Mr. Mckavish!</h1>
+  <h1>Hi Mr. McKavish!</h1>
   <h4>This website was created by TEAM SOUTH AFRICA!</h4>
 </div>
 
