--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <h4>This website was created by TEAM SOUTH AFRICA!</h4>
 </div>
 
-  <div style="background-color: #FF0F0F; color:white; margin:20px; padding:20px;">
+  <div style="background-color: #FF23FF; color:white; margin:20px; padding:20px;">
   If you can read this Mr. McKavish, then you are at the official South African Olympics website. You can find out more about
   our team and its members by exploring the page. We truly hope you enjoy this!
 </div>
