--- a/olympics.html
+++ b/olympics.html
@@ -29,7 +29,7 @@
 <div style="background-color: #0099CC; color:white; margin:20px; padding:20px;">
   <p>
   Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain 
-  Karan Sidhu. We created this webstie using teamwork, creativity, and cooperation. 
+  Karan Sidhu. We created this website using teamwork, creativity, and cooperation. 
 </p>
 </div>
 
