--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
   <h4>This website was created by TEAM SOUTH AFRICA!</h4>
 </div>
 
-  <div style="background-color: #66EBAC; color:FUCHSIA; margin:20px; padding:20px;">
-  <h3> If you can read this Mr. McKavish, then you are at the official South African Olympics website. You can find out more about
+  <div style="background-color: #66EBAC; color:fuchsia; margin:20px; padding:20px;">
+  If you can read this Mr. McKavish, then you are at the official South African Olympics website. You can find out more about
   our team and its members by exploring the page. We truly hope you enjoy this and the information we have to offer!
-  </h3>
- 
 </div>
 
 
