--- a/olympics.html
+++ b/olympics.html
@@ -26,7 +26,7 @@
 </div>
 
 
-<div style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
+<div style="background-color: #6E6EB8; color:white; margin:20px; padding:20px;">
   <p>
   Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain 
   Karan Sidhu. We created this website using teamwork, creativity, and cooperation. 
