--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 
   <div style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
-  If you are reading this Mr. McKavish, then you are at the official South African Olympics website. You can find out more about
+  If you are reading this Mr. McKavish, then you are at the official WRMS South African Olympics website. You can find out more about
   our team and its members by exploring the page. We truly hope you enjoy this and the information we have to offer!
 </div>
 
