--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
   our team and its members by exploring the page. We truly hope you enjoy this and the information we have to offer!
 </div>
 
+<div><p>
+ Mr. McKavish helps us with:
+Cardiovascular Endurance
+Muscular Endurance
+Muscular Strength
+Flexibility
+Body Mass Index
+We do this through everyday activity and skill development.
+
+
+</p></div>
 
 
 </body> 
