--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
 <div><p>
  Mr. McKavish helps us with:
-Cardiovascular Endurance
-Muscular Endurance
-Muscular Strength
-Flexibility
-Body Mass Index
-We do this through everyday activity and skill development.
+<li>Cardiovascular Endurance </li>
+<li>Muscular Endurance </li>
+<li>Muscular Strength </li>
+<li>Flexibility </li>
+<li>Body Mass Index </li>
+through everyday activity and skill development.
 
 
 </p></div>
