--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 
 <div><p>
- Mr. McKavish helps us with:
+ Mr. McKavish helps us develop our:
 <li>Cardiovascular Endurance </li>
 <li>Muscular Endurance </li>
 <li>Muscular Strength </li>
@@ -47,6 +47,7 @@ through everyday activity and skill development.
 
 </p></div>
 
+<img src=//lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660">
 
 </body> 
 </html>
