--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   our team and its members by exploring the page. We truly hope you enjoy this and the information we have to offer!
 </div>
 
-<div><p>
- Mr. McKavish helps us develop our:
+<div style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
+ Mr. McKavish helps us with:
 <li>Cardiovascular Endurance </li>
 <li>Muscular Endurance </li>
 <li>Muscular Strength </li>
@@ -47,7 +47,6 @@ through everyday activity and skill development.
 
 </p></div>
 
-<img src=//lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660">
 
 </body> 
 </html>
