--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ through everyday activity and skill development.
 
 </p></div>
 
-<img src=//lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660">
+<img src="//lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660">
 
 </body> 
 </html>
