--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ through everyday activity and skill development.
 
 </p></div>
 
-<img src="src="/uimg/image/1211932021302/1187458543228/1290583073404.jpg_w235.jpg"">
+<img src="/uimg/image/1211932021302/1187458543228/1290583073404.jpg_w235.jpg>
 
 </body> 
 </html>
