--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
 <li>Body Mass Index </li>
 through everyday activity and skill development.
 
-
-</p></div>
+</div>
+  <p> Google supports our country.</p>
 
 <div>
 <IMG class="displayed" src="//lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660"  
 style="width:569px;length:999px;">
-  <p>Google supports our country.</p>
+  <p>Google supports our country.
+  </p>
   </div>
   
 </body> 
