--- a/olympics.html
+++ b/olympics.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Shray Patel</title>
+  <title>Africans of the South</title>
   <link rel='stylesheet' href='style.css'>
   <meta charset="utf-8">
   <style>
