--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 
 <div style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
   <p>
-  Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain 
-  Karan Sidhu. We created this website using teamwork, creativity, and cooperation. 
+  YEAH YEAH YEAH YEAH anis
 </p>
 </div>
+
+<a href="mrmckavish.gihub.io/olympics.html" class="btn btn-lg btn-primary">Anish</a>
+
 
 </body>   
 </html>
