--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </p>
 </div>
 
-<a href="mrmckavish.gihub.io/olympics.html" class="btn btn-lg btn-primary">Anish</a>
+<a href="olympics.html" class="btn btn-lg btn-primary">Anish</a>
 
 
 </body>   
