--- a/olympics.html
+++ b/olympics.html
@@ -34,17 +34,9 @@
 </p>
 </div>
 
-<script>
-var showImg = false;
-    document.getElementById('monkeh').style.visibility = 'hidden'
 
-  $scope.showImg = function(){
-    var showImg = true;
-  }
-  
-</script>
 
-<a href="olympics.html" class="btn btn-lg btn-primary" ng-click='showImg()' id='monkeh'>Shray --></a>
+<a href="olympics.html" class="btn btn-lg btn-primary" ng-click='showImg()' id='monkeh'>Back to home where you can rape</a>
 
 <img src='http://wac.450f.edgecastcdn.net/80450F/thefw.com/files/2013/05/tumblr-lifethrugifs.gif' ng-show='{{showImg}}==true'>
 
