--- a/olympics.html
+++ b/olympics.html
@@ -36,7 +36,7 @@
 
 
 
-<a href="olympics.html" class="btn btn-lg btn-primary" ng-click='showImg()' id='monkeh'>Back to home where you can rape</a>
+<a href="olympics.html" class="btn btn-lg btn-primary" ng-click='showImg()' id='monkeh'>Back to the home page</a>
 
 <img src='http://wac.450f.edgecastcdn.net/80450F/thefw.com/files/2013/05/tumblr-lifethrugifs.gif' ng-show='{{showImg}}==true'>
 
