--- a/olympics.html
+++ b/olympics.html
@@ -36,7 +36,7 @@
 
 
 
-<a href="olympics.html" class="btn btn-lg btn-primary" ng-click='showImg()' id='monkeh'>Back to the home page</a>
+<a href="index.html" class="btn btn-lg btn-primary" ng-click='showImg()' id='monkeh'>Back to the home page</a>
 
 
 </body>   
