--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <div style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
   <p>
-  YEAH YEAH YEAH YEAH anis
+  We are South Africa. Your mission, if you choose to accept it, is to accept your mission.
 </p>
 </div>
 
