--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
 </p>
 </div>
 
+<div style="background-color: #FF9999; color:white; margin:20px; padding:20px;">
+  <p>
+   My name is Kim Kardashian West, and I have a child named North West.
+</p>
+</div>
+
 <a href="olympics.html" class="btn btn-lg btn-primary">Anish</a>
 
 
