--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 </p>
 </div>
 
+<div style="background-color: #FF99FF; color:white; margin:20px; padding:20px;">
+  <p>
+   What, I have to type more junk here?
+</p>
+</div>
+
 <a href="olympics.html" class="btn btn-lg btn-primary">Anish</a>
 
 
