--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </p>
 </div>
 
-<a href="olympics.html" class="btn btn-lg btn-primary">Anish</a>
+<a href="olympics.html" class="btn btn-lg btn-primary">Click on me, you dimwit!</a>
 
 
 </body>   
