--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
 
 <div style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
   <p>
-  We are South Africa. Your mission, if you choose to accept it, is to accept your mission.
+  Hello, Mr. McKavish, and welcome to the official home page of WRMS South Africa Olympics. 
+  The team will tell you about our current and past team members and just a bit of info on South Africa itself. 
 </p>
 </div>
 
 <div style="background-color: #FF9999; color:white; margin:20px; padding:20px;">
   <p>
    My name is Kim Kardashian West, and I have a child named North West.
+   My name is Shray and I'm an annoying little piece of ...
 </p>
 </div>
 
