--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
-  <h1>The Team</h1>
-  <h4>All of our team's current and past members</h4>
+  <h1>South Africa</h1>
+  <h4>The homepage of the South Africa website</h4>
 </div>
 
 
@@ -30,6 +30,7 @@
   <p>
   Hello, Mr. McKavish, and welcome to the official home page of WRMS South Africa Olympics. 
   The team will tell you about our current and past team members and just a bit of info on South Africa itself. 
+  The team hopes you enjoy the website!
 </p>
 </div>
 
