--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <p>
   Hello, Mr. McKavish, and welcome to the official home page of WRMS South Africa Olympics. 
   The team will tell you about our current and past team members and just a bit of info on South Africa itself. 
-  The team hopes you enjoy the website!
+  The team hopes you enjoy the website! (And whatever displeases you about this website can be blamed on Shray Patel.)
 </p>
 </div>
 
