--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
   <p>
   Hello, Mr. McKavish, and welcome to the official home page of WRMS South Africa Olympics. 
-  The team will tell you about our current and past team members and just a bit of info on South Africa itself. 
+  The team will tell you about our current and past team members, and a bit of info on South Africa itself. 
   The team hopes you enjoy the website! (And whatever displeases you about this website can be blamed on Shray Patel.)
 </p>
 </div>
