--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 </p>
 </div>
 
+<IMG class="displayed" src=https://lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660  
+style="width:304px;length:210px;">
+  
 <div style="background-color: #FF9999; color:white; margin:20px; padding:20px;">
   <p>
    My name is Kim Kardashian West, and I have a child named North West.
