--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 </p>
 </div>
 
+
+<h4>Google supports South Africa as well!</h4>
 <IMG class="displayed" src=https://lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660  
-style="width:304px;length:210px;">
+style="width:600px;length:600px;">
   
 <div style="background-color: #FF9999; color:white; margin:20px; padding:20px;">
   <p>
