--- a/olympics.html
+++ b/olympics.html
@@ -36,7 +36,7 @@
 
 
 
-<a href=oogle.com class="btn btn-lg btn-primary" >Back to the home page</a>
+<a href=index.html class="btn btn-lg btn-primary" >Back to the home page</a>
 
 
 </body>   
