--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ style="width:600px;length:600px;">
 </p>
 </div>
 
-<a href=www.oogle.com class="btn btn-lg btn-primary">Click on me, you dimwit!</a>
+<a href=index.html class="btn btn-lg btn-primary">Click on me, you dimwit!</a>
 
 
 </body>   
