--- a/olympics.html
+++ b/olympics.html
@@ -27,7 +27,7 @@
 </div>
 
 
-<div style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
+<div style="background-color: #EE99FF; color:white; margin:20px; padding:20px;">
   <p>
   Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain 
   Karan Sidhu. We created this website using teamwork, creativity, and cooperation. 
@@ -37,105 +37,7 @@
 
 <div style="background-color: #99FFAA; color:white; margin:20px; padding:20px;">
   <p>
-  Mr Mckavish is adaptable
-adventurous
-affable
-affectionate
-agreeable
-ambitious
-amiable
-amicable
-amusing
-brave
-bright
-broad-minded
-calm
-careful
-charming
-communicative
-compassionate 
-conscientious
-considerate
-convivial
-courageous
-courteous
-creative
-decisive
-determined
-diligent
-diplomatic
-discreet
-dynamic
-easygoing
-emotional
-energetic
-enthusiastic
-exuberant
-fair-minded
-faithful
-fearless
-forceful
-frank
-friendly
-funny
-generous
-gentle
-good
-gregarious
-hard-working
-helpful
-honest
-humorous
-imaginative
-impartial
-independent
-intellectual
-intelligent
-intuitive
-inventive
-kind
-loving
-loyal
-modest
-neat
-nice
-optimistic
-passionate
-patient
-persistent 
-pioneering
-philosophical
-placid
-plucky
-polite
-powerful
-practical
-pro-active
-quick-witted
-quiet
-rational
-reliable
-reserved
-resourceful
-romantic
-self-confident
-self-disciplined
-sensible
-sensitive
-shy
-sincere
-sociable
-straightforward
-sympathetic
-thoughtful
-tidy
-tough
-unassuming
-understanding
-versatile
-warmhearted
-willing
- and witty. 
+  Mr Mckavish is adventurous affable affectionate agreeable ambitious amiable amicable amusing brave bright broad-minded calm careful charming communicative compassionate conscientious considerate convivial courageous courteous creative decisive determined diligent diplomatic discreet dynamic easygoing emotional energetic enthusiastic exuberant fair-minded faithful fearless forceful frank friendly funny generous gentle good gregarious hard-working helpful honest humorous imaginative impartial independent intellectual intelligent intuitive inventive kind loving loyal modest neat nice optimistic passionate patient persistent pioneering philosophical placid plucky polite powerful practical pro-active quick-witted quiet rational reliable reserved resourceful romantic self-confident self-disciplined sensible sensitive shy sincere sociable straightforward sympathetic thoughtful tidy tough unassuming understanding versatile warmhearted willing and witty.
 </p>
 </div>
 
