--- a/olympics.html
+++ b/olympics.html
@@ -35,7 +35,7 @@
 </div>
 
 
-<div style="background-color: #99FFAA; color:white; margin:20px; padding:20px;">
+<div style="background-color: #AAFF99; color:white; margin:20px; padding:20px;">
   <p>
   Mr Mckavish is adventurous affable affectionate agreeable ambitious amiable amicable amusing brave bright broad-minded calm careful charming communicative compassionate conscientious considerate convivial courageous courteous creative decisive determined diligent diplomatic discreet dynamic easygoing emotional energetic enthusiastic exuberant fair-minded faithful fearless forceful frank friendly funny generous gentle good gregarious hard-working helpful honest humorous imaginative impartial independent intellectual intelligent intuitive inventive kind loving loyal modest neat nice optimistic passionate patient persistent pioneering philosophical placid plucky polite powerful practical pro-active quick-witted quiet rational reliable reserved resourceful romantic self-confident self-disciplined sensible sensitive shy sincere sociable straightforward sympathetic thoughtful tidy tough unassuming understanding versatile warmhearted willing and witty.
 </p>
