--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
   <h1>South Africa</h1>
-  <h4>Third Period South Africa created this website for you EXTRA LONG SEEENTEEENCE. WHAT ELSE IS EXTRA LON?</h4>
+  <h4>Third Period South Africa created this website for you EXTRA LONG SEEENTEEENCE. WHAT ELSE IS EXTRA LONG`?</h4>
 </div>
 
 
