--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <p>
   Hello, Mr. McKavish, and welcome to the official home page of WRMS South Africa Olympics. 
   The team will tell you about our current and past team members, and a bit of info on South Africa itself. 
-  The team hopes you enjoy the website! (And whatever displeases you about this website can be blamed on Shray Patel.)
+  The team hopes you enjoy the website! (And whatever displeases you about this website can be blamed on Sahil Mehta.)
 </p>
 </div>
 
@@ -44,7 +44,7 @@ style="width:600px;length:600px;">
 <div style="background-color: #FF9999; color:white; margin:20px; padding:20px;">
   <p>
    My name is Kim Kardashian West, and I have a child named North West.
-   My name is Shray and I'm an annoying little piece of ...
+   My name is Sahil Mehta and I'm an annoying little piece of ...
 </p>
 </div>
 
