--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
   <h1>South Africa</h1>
-  <h4>Third Period South Africa created this website for you EXTRA LONG SEEENTEEENCE. WHAT ELSE IS EXTRA LONG? Deez nuts</h4>
+  <h4>Third Period South Africa created this website for you!</h4>
 </div>
 
 
@@ -40,12 +40,13 @@ style="width:600px;length:600px;">
 
 <div style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
 <h4>Google supports South Africa as well!</h4>
+ 
 </div>
   
 
 
 <a href="olympics.html" class="btn btn-lg btn-primary">Click on me, you dimwit!</a>
 
-
+<h6>EXTRA LONG SEEENTEEENCE. WHAT ELSE IS EXTRA LONG? Deez nuts</h6>
 </body>   
 </html>
