--- a/olympics.html
+++ b/olympics.html
@@ -37,7 +37,7 @@
 
 <div style="background-color: #FF9999; color:white; margin:20px; padding:20px;">
   <p>
-  Mr Mckavish is adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, discreet, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, gentle, good,  hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful,  self-confident, self-disciplined, sensible, sensitive, shy, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, versatile, and witty.
+  Mr Mckavish is (in alphabetical order): adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, discreet, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, gentle, good,  hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful,  self-confident, self-disciplined, sensible, sensitive, shy, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, versatile, and witty.
 </p>
 </div>
 
