--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@ style="width:600px;length:600px;">
 </div>
   
 
-
+<div class="displayed">
 <a href="olympics.html" class="btn btn-lg btn-primary">Click on me, you dimwit!</a>
+</div>
 
-<h6>EXTRA LONG SEEENTEEENCE. WHAT ELSE IS EXTRA LONG? Deez nuts</h6>
+
 </body>   
 </html>
