--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ style="width:600px;length:600px;">
   
 
 <div class="displayed">
-<a href="olympics.html" class="btn btn-lg btn-primary">Click on me, you dimwit!</a>
+<a href="olympics.html" class="btn btn-lg btn-primary">Anish, can you center this?</a>
 </div>
 
 
