--- a/olympics.html
+++ b/olympics.html
@@ -41,7 +41,12 @@
 </p>
 </div>
 
-
+<div style="background-color: #FF9999; color:white; margin:20px; padding:20px;">
+  <p>
+  The Olympics are a variety of events in which we must prove our excellence as a team in basketball, tennis, cardiovascular 
+  endurance, bocheyball, shot put, and muscular development.
+</p>
+</div>
 <a href="index.html" class="btn btn-lg btn-primary" >Back to the home page</a>
 
 
