--- a/olympics.html
+++ b/olympics.html
@@ -41,7 +41,7 @@
 </p>
 </div>
 
-<div style="background-color: #99AAFF; color:blue; margin:20px; padding:20px;">
+<div style="background-color: #99AAFF; color:white; margin:20px; padding:20px;">
   <p>
   The Olympics are a variety of events in which we must prove our excellence as a team in basketball, tennis, cardiovascular 
   endurance, bocheyball, shot put, and muscular development.
