--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@ style="width:600px;length:600px;">
  
 </div>
   
-
+<div class="center">
+<a href="olympics.html" class="btn btn-lg btn-primary"> Next --> </a>
+</div>
 
 </body>   
 </html>
